--- a/index.html
+++ b/index.html
@@ -5,8 +5,289 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
+    <div class="container">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <header class="index-header">
+        <div class="header-content">
+            <a class="logo"></a>
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="POST"></form>
+            <div class="user-block">
+              <a href="#" class="singup">Войти</a>
+              <a href="#">Сравнить</a>
+              <a href="#" class="basket">Корзина</a>
+            </div>
+            <nav class="main-navigation">
+                <ul class="site-menu">
+                  <li>
+                    <a class="catalog" href="#">Каталог товаров</a>
+                    <ul class="catalog-navigation">
+                      <li>
+                        <a href="#">Виртуальная реальность</a>
+                      </li>
+                      <li>
+                        <a href="#">Моноподы для селфи</a>
+                      </li>
+                      <li>
+                        <a href="#">Экшн-камеры</a>
+                      </li>
+                      <li>
+                        <a href="#">Фитнес-браслеты</a>
+                      </li>
+                      <li>
+                        <a href="#">Умные часы</a>
+                      </li>
+                      <li>
+                        <a href="#">Квадрокоптеры</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                      <a href="#">Доставка</a>
+                  </li>
+                  <li>
+                      <a href="#">Гарантия</a>
+                  </li>
+                  <li>
+                      <a href="#">Контакты</a>
+                  </li>
+                </ul>
+              </nav>
+        </div>
+      </header>
 
+      <main>
+
+        <div class="slider-container">
+          <section class="slide-1">
+            <img src="img/slider-1.png" alt="Фото товара: селфи палка" width="384" height="486">
+            <div class="slider-textbox">
+              <h2 class="slide-header">Делай селфи, как&#160;Бен&#160;Стиллер!</h2>  <!-- Здесь, возможно, лучше не <h2>, а просто <p> -->
+              <p class="slide-description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+              <a class="slide-button">Подробнее</a>
+              <ul class="slide-features">
+                <h3 class="visually hidden">Селфи палка: характеристики товара</h3>
+                <li>
+                  <p class="feature-property-value">8,5 м</p>
+                  <p class="feature-property">Длина палки</p>
+                </li>
+                <li>
+                  <p class="feature-property-value">5 кг</p>
+                  <p class="feature-property">Вес палки</p>
+                </li>
+                <li>
+                  <p class="feature-property-value">Карбон</p>
+                  <p class="feature-property">Материал</p>
+                </li>
+              </ul>
+            </div>
+          </section>
+          <section class="slide-2">
+              <img src="img/slider-2.png" alt="Фото товара: фитнесc-браслет" width="345" height="485">
+              <div class="slider-textbox">
+                <h2 class="slide-header">Худеем правильно!</h2>
+                <p class="slide-description">Мотивирующие фитнесc-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
+                <a class="slide-button">Подробнее</a>
+                <ul class="slide-features">
+                  <h3 class="visually hidden">Фитнесc-браслеты: характеристики товара</h3>
+                  <li>
+                    <p class="feature-property-value">48 часов</p>
+                    <p class="feature-property">Без подзарядки</p>
+                  </li>
+                </ul>
+              </div>
+          </section>
+          <section class="slide-3">
+            <img src="img/slider-3.png" alt="Фото товара: квадрокоптер" width="526" height="334">
+            <div class="slider-textbox">
+              <h2 class="slide-header">Порхает как бабочка, жалит как пчела!</h2>  <!-- Здесь, возможно, лучше не <h2>, а просто <p> -->
+              <p class="slide-description">Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
+              <a class="slide-button">Подробнее</a>
+              <ul class="slide-features">
+                <h3 class="visually hidden">Селфи палка: характеристики товара</h3>
+                <li>
+                  <p class="feature-property-value">800 м</p>
+                  <p class="feature-property">Дальность полёта</p>
+                </li>
+                <li>
+                  <p class="feature-property-value">50 м</p>
+                  <p class="feature-property">Радиус поражения</p>
+                </li>
+              </ul>
+            </div>
+          </section>
+          <ul class="slider-switch">
+            <!-- тут будут переключатели, скорее всего радиокнопки, ещё не смотрел как это делать -->
+          </ul>
+          </section>
+        </div>
+
+        <section class="catalog-categories">
+          <h2 class="visually hidden">Каталог товаров: категории товаров</h2>
+          <a href="#" class="catalog-category-link">
+            <div class="icon-block virtual-real">
+              <img src="img/svg/virtual-real.svg" alt="Иконка: очки виртуальной реальности" width="97" height="55">
+            </div>
+            <h3 class="catalog-category-name">Виртуальная реальность</h3>
+          </a>
+          <a href="#" class="catalog-category-link">
+            <div class="icon-block monopod">
+              <img src="img/svg/monopod.svg" alt="Иконка: Моноподы для селфи" width="86" height="117">
+            </div>
+            <h3 class="catalog-category-name">Моноподы для селфи</h3>
+          </a>
+          <a href="#" class="catalog-category-link">
+            <div class="icon-block action-cam">
+              <img src="img/svg/action-cam.svg" alt="Иконка: Экшн-камеры" width="71" height="87">
+            </div>
+            <h3 class="catalog-category-name">Экшн-камеры</h3>
+          </a>
+          <a href="#" class="catalog-category-link">
+            <div class="icon-block fitnes-watch">
+              <img src="img/svg/fitnes-watch.svg" alt="Иконка: фитнесc-браслеты" width="107" height="65">
+            </div>
+            <h3 class="catalog-category-name">Фитнес-браслеты</h3>
+          </a>
+          <a href="#" class="catalog-category-link">
+            <div class="icon-block smartwatch">
+              <img src="img/svg/smartwatch.svg" alt="Иконка: умные часы" width="56" height="98">
+            </div>
+            <h3 class="catalog-category-name">Умные часы</h3>
+          </a>
+          <a href="#" class="catalog-category-link">
+            <div class="icon-block copter">
+              <img src="img/svg/copter.svg" alt="Иконка: квадрокоптер" width="132" height="69">
+            </div>
+            <h3 class="catalog-category-name">Квадрокоптеры</h3>
+          </a>
+
+
+        </section>
+
+        <section class="services-block">
+          <h2 class="visually hidden">Услуги</h2>
+          <ul class="services-slider-switch">
+            <!-- тут будут переключатели слайда, сверстаю позже -->
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <div class="services-slider">
+            <section class="delivery-slide">
+              <h3 class="services-header">Доставка</h3>
+              <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+              <!-- Эти иконки думаю фоновые будут-->
+            </section>
+            <section class="garantie-slide">
+              <h3 class="services-header">Гарантия</h3>
+              <p>Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+            </section>
+            <section class="credit-slide">
+              <h3 class="services-header">Кредит</h3>
+              <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+            </section>
+          </div>
+        </section>
+
+        <ul class="brand-list">
+          <li>
+            <a class="brand-link" href="#">
+              <img class="brand-logo" src="img/logo-dji.jpg" alt="Логотип DJI">
+              <img class="brand-logo-hover" src="img/logo-dji-hover.jpg" alt="Логотип DJI">
+            </a>
+          </li>
+          <li>
+            <a class="brand-link" href="#">
+              <img class="brand-logo" src="img/logo-spgadgets.jpg" alt="Логотип SPgadjets">
+              <img class="brand-logo-hover" src="img/logo-spgadgets-hover.jpg" alt="Логотип SPgadjets">
+            </a>
+          </li>
+          <li>
+            <a class="brand-link" href="#">
+              <img class="brand-logo" src="img/logo-gopro.jpg" alt="Логотип GoPro">
+              <img class="brand-logo-hover" src="img/logo-gopro-hover.jpg" alt="Логотип GoPro">
+            </a>
+          </li>
+          <li>
+            <a class="brand-link" href="#">
+              <img class="brand-logo" src="img/logo-vive.jpg" alt="Логотип vive">
+              <img class="brand-logo-hover" src="img/logo-vive-hover.jpg" alt="Логотип vive">
+            </a>
+          </li>
+        </ul>
+
+        <div class="information-block">
+          <section class="about">
+            <h2>О нас</h2>
+            <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+            <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+            <ul class="delivery options">
+              <li>Деловые Линии</li>
+              <li>Автотрейдинг</li>
+              <li>ЖелДорЭкспедиция</li>
+            </ul>
+            <a class="about-link" href="#">Подробнее о нас</a>
+          </section>
+          <section class="contacts">
+            <h2>Контакты</h2>
+            <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473672!2d37.527429316058075!3d55.6870340045298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1551979685788" width="560" height="222" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <a class="mail-link" href="#">Напишите нам</a>
+          </section>
+        </div>
+
+      </main>
+
+      <footer class="site-footer">
+        <div class="footer-container">
+          <div class="footer-left-block">
+            <a href="#" class="footer-devicelogo-link">
+              <svg class="devicelogo" xmlns="http://www.w3.org/2000/svg" width="163" height="35" viewBox="0 0 163 35">
+                <defs>
+                    <style>
+                        .cls-1{fill-rule:evenodd}
+                    </style>
+                </defs>
+                <path id="_-e-logo" d="M-.151.702v33.6h13.532a15.72 15.72 0 0 0 11.72-4.824 16.458 16.458 0 0 0 4.712-11.976 16.458 16.458 0 0 0-4.712-11.976A15.723 15.723 0 0 0 13.381.702H-.151zM7.582 26.91V8.091h5.8a8.646 8.646 0 0 1 6.5 2.568 9.407 9.407 0 0 1 2.489 6.84 9.406 9.406 0 0 1-2.489 6.84 8.642 8.642 0 0 1-6.5 2.568h-5.8zm34.8-5.952h12.082v-7.3H42.378V8.091h13.291V.702H34.645v33.6H55.91V26.91H42.378v-5.952zm36.343 13.344L89.744.702h-8.458l-7.491 24.72L66.304.702h-8.457l11.019 33.6h9.859zm14.4 0h7.733V.702h-7.733v33.6zm38.615-1.416a15.506 15.506 0 0 0 6.041-5.688l-6.67-3.84a7.482 7.482 0 0 1-3.165 3.024 9.87 9.87 0 0 1-4.664 1.1 9.595 9.595 0 0 1-7.177-2.736 9.909 9.909 0 0 1-2.682-7.248 9.909 9.909 0 0 1 2.682-7.248 9.595 9.595 0 0 1 7.177-2.736 9.897 9.897 0 0 1 4.639 1.08 7.592 7.592 0 0 1 3.19 3.048l6.67-3.84a15.873 15.873 0 0 0-6.09-5.688 17.42 17.42 0 0 0-8.409-2.088c-9.779-.272-17.797 7.691-17.591 17.472-.208 9.781 7.809 17.747 17.588 17.476a17.52 17.52 0 0 0 8.458-2.088zm17.881-11.928h12.082v-7.3h-12.085V8.091h13.29V.702h-21.023v33.6h21.265V26.91h-13.532v-5.952z" class="cls-1" data-name="-e-logo"/>
+              </svg>
+            </a>
+            <p>г. Москва, ул. Строителей, 15</p>
+          </div>
+          <div class="footer-center-container">
+            <ul class="footer-services-list">
+              <li>
+                <a href="#">Доставка</a>
+              </li>
+              <li>
+                <a href="#">Гарантия</a>
+              </li>
+              <li>
+                <a href="#">Контакты</a>
+              </li>
+            </ul>
+            <ul class="footer-social-list">
+              <li>
+                <a href="#">Фейсбук</a>
+              </li>
+              <li>
+                <a href="#">Инстаграм</a>
+              </li>
+              <li>
+                <a href="#">Твиттер</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-right-container">
+            <ul class="footer-user-block">
+              <li><a href="#">Войти</a></li>
+              <li><a href="#">Сравнить</a></li>
+              <li><a href="#">Корзина</a></li>
+            </ul>
+            <p>Тел.: +7 (495) 495-95-95</p>
+            <a class="academy-link" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+          </div>
+        </div>
+      </footer>
+
+    </div>
   </body>
 </html>
