--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <section class="contacts">
             <h2>Контакты</h2>
             <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473672!2d37.527429316058075!3d55.6870340045298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1551979685788" width="560" height="222" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <img src="img/map.jpg" alt="Адрес офиса: ул.Строителей, 15" width="560" height="222">
             <a class="mail-link" href="#">Напишите нам</a>
           </section>
         </div>
@@ -287,7 +287,23 @@
           </div>
         </div>
       </footer>
-
     </div>
+    <!-- PopUps -->
+    <section class="create-message">
+      <form class="message-form" action="https://echo.htmlacademy.ru" method="POST">
+        <input class="user-name" id="user-name" type="text" placeholder="Имя Фамилия">
+        <label for="user-name">Ваше Имя:</label>
+        <input class="user-email" id="user-email" type="email" placeholder="email@example.com">
+        <label for="user-email">Ваш e-mail:</label>
+        <textarea class="message-text" id="message-text" placeholder="В свободной форме"></textarea>
+        <label for="message-text">Текст письма:</label>
+        <button class="submit-button" type="submit">Отправить</button>
+      </form>
+      <button class="popup-close-button" type="button"></button>
+    </section>
+    <section class="map-popup">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1123749473672!2d37.527429316058075!3d55.6870340045298!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1551979685788" width="960" height="559" frameborder="0" style="border:0" allowfullscreen></iframe>
+      <button class="popup-close-button" type="button"></button>
+    </section>
   </body>
 </html>
