Подключил шрифты и normalize

--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,9 @@
 <html lang="ru">
 <head>
   <title>HTML Academy: Девайс-Каталог товаров</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
