Закончил хеадер для главной

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
             </a>
             <form class="search-form" action="https://echo.htmlacademy.ru" method="POST">
               <input class="search-form-input" id="search-form-input" type="text" placeholder="Поиск по сайту">
-              <button class="search-form-button" type="submit"></button>
+              <button class="search-form-button" type="submit">Найти</button>
             </form>
             <div class="user-block not-enter">
               <a href="#" class="login">Войти</a>
-              <a href="#">Сравнить</a>
-              <a href="#" class="basket">Корзина</a>
+              <a href="#" class="compare">Сравнить</a>
+              <a href="#" class="cart">Корзина</a>
             </div>
             <nav class="main-navigation">
                 <ul class="site-menu">
-                  <li>
-                    <a class="catalog" href="catalog.html">Каталог товаров</a>
+                  <li class="catalog">
+                    <a class="catalog-link" href="catalog.html">Каталог товаров</a>
                     <ul class="catalog-navigation">
                       <li>
                         <a href="#">Виртуальная реальность</a>
