пытаюсь попасть в выпадающее меню с клавиатуры

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <nav class="main-navigation">
                 <ul class="site-menu">
-                  <li class="catalog">
+                  <li class="catalog" tabindex="0">
                     <a class="catalog-link" href="catalog.html">Каталог товаров</a>
                     <ul class="catalog-navigation">
                       <li>
