--- a/catalog.html
+++ b/catalog.html
@@ -94,23 +94,23 @@
             <legend class="filter-legend">Цвет</legend>
             <ul>
               <li>
-                <input type="checkbox" id="black" checked>
+                <input type="checkbox" id="black" name="black" checked>
                 <label for="black">Черный</label>
               </li>
               <li>
-                <input type="checkbox" id="white">
+                <input type="checkbox" id="white" name="white">
                 <label for="white">Белый</label>
               </li>
               <li>
-                <input type="checkbox" id="blue" checked>
+                <input type="checkbox" id="blue" name="blue" checked>
                 <label for="blue">Синий</label>
               </li>
               <li>
-                <input type="checkbox" id="red" checked>
+                <input type="checkbox" id="red" name="red" checked>
                 <label for="red">Красный</label>
               </li>
               <li>
-                <input type="checkbox" id="pink">
+                <input type="checkbox" name="pink" id="pink">
                 <label for="pink">Розовый</label>
               </li>
             </ul>
@@ -118,9 +118,9 @@
           <!-- bluetooth -->
           <fieldset class="bluetooth">
             <legend class="filter-legend">Bluetooth</legend>
-            <input type="radio" id="bluetooth-on">
+            <input type="radio" id="bluetooth-on" name="bluetooth-on" >
             <label for="bluetooth-on">Есть</label>
-            <input type="radio" id="bluetooth-off">
+            <input type="radio" id="bluetooth-off" name="bluetooth-off" >
             <label for="bluetooth-off">Нет</label>
           </fieldset>
           <button class="filter-submit-button" type="submit">Показать</button>
