закончил блок бренд-ссылок

--- a/index.html
+++ b/index.html
@@ -215,27 +215,23 @@
 
         <ul class="brand-list">
           <li>
-            <a class="brand-link" href="#">
+            <a class="brand-link dji" href="#">
               <img class="brand-logo" src="img/logo-dji.jpg" alt="Логотип DJI">
-              <img class="brand-logo-hover" src="img/logo-dji-hover.jpg" alt="Логотип DJI">
             </a>
           </li>
           <li>
-            <a class="brand-link" href="#">
+            <a class="brand-link spgadgets" href="#">
               <img class="brand-logo" src="img/logo-spgadgets.jpg" alt="Логотип SPgadjets">
-              <img class="brand-logo-hover" src="img/logo-spgadgets-hover.jpg" alt="Логотип SPgadjets">
             </a>
           </li>
           <li>
-            <a class="brand-link" href="#">
+            <a class="brand-link gopro" href="#">
               <img class="brand-logo" src="img/logo-gopro.jpg" alt="Логотип GoPro">
-              <img class="brand-logo-hover" src="img/logo-gopro-hover.jpg" alt="Логотип GoPro">
             </a>
           </li>
           <li>
-            <a class="brand-link" href="#">
+            <a class="brand-link vive" href="#">
               <img class="brand-logo" src="img/logo-vive.jpg" alt="Логотип vive">
-              <img class="brand-logo-hover" src="img/logo-vive-hover.jpg" alt="Логотип vive">
             </a>
           </li>
         </ul>
