--- a/index.html
+++ b/index.html
@@ -144,48 +144,49 @@
           </section>
         </section>
 
-        <section class="catalog-categories">
-          <h2 class="visually-hidden">Каталог товаров: категории товаров</h2>
-          <a href="#" class="catalog-category-link">
-            <div class="icon-block virtual-real">
-              <img src="img/svg/virtual-real.svg" alt="Иконка: очки виртуальной реальности" width="97" height="55">
-            </div>
-            <h3 class="catalog-category-name">Виртуальная реальность</h3>
-          </a>
-          <a href="#" class="catalog-category-link">
-            <div class="icon-block monopod">
-              <img src="img/svg/monopod.svg" alt="Иконка: Моноподы для селфи" width="86" height="117">
-            </div>
-            <h3 class="catalog-category-name">Моноподы для&#160;селфи</h3>
-          </a>
-          <a href="#" class="catalog-category-link">
-            <div class="icon-block action-cam">
-              <img src="img/svg/action-cam.svg" alt="Иконка: Экшн-камеры" width="71" height="87">
-            </div>
-            <h3 class="catalog-category-name">Экшн-камеры</h3>
-          </a>
-          <a href="#" class="catalog-category-link">
-            <div class="icon-block fitnes-watch">
-              <img src="img/svg/fitnes-watch.svg" alt="Иконка: фитнесc-браслеты" width="107" height="65">
-            </div>
-            <h3 class="catalog-category-name">Фитнес-браслеты</h3>
-          </a>
-          <a href="#" class="catalog-category-link">
-            <div class="icon-block smartwatch">
-              <img src="img/svg/smartwatch.svg" alt="Иконка: умные часы" width="56" height="98">
-            </div>
-            <h3 class="catalog-category-name">Умные часы</h3>
-          </a>
-          <a href="#" class="catalog-category-link">
-            <div class="icon-block copter">
-              <img src="img/svg/copter.svg" alt="Иконка: квадрокоптер" width="132" height="69">
-            </div>
-            <h3 class="catalog-category-name">Квадрокоптеры</h3>
-          </a>
+        <section class="catalog-categories-container">
+          <div class="catalog-categories">
+            <h2 class="visually-hidden">Каталог товаров: категории товаров</h2>
+            <a href="#" class="catalog-category-link">
+              <div class="icon-block virtual-real">
+                <img src="img/svg/virtual-real.svg" alt="Иконка: очки виртуальной реальности" width="97" height="55">
+              </div>
+              <h3 class="catalog-category-name">Виртуальная реальность</h3>
+            </a>
+            <a href="#" class="catalog-category-link">
+              <div class="icon-block monopod">
+                <img src="img/svg/monopod.svg" alt="Иконка: Моноподы для селфи" width="86" height="117">
+              </div>
+              <h3 class="catalog-category-name">Моноподы для&#160;селфи</h3>
+            </a>
+            <a href="#" class="catalog-category-link">
+              <div class="icon-block action-cam">
+                <img src="img/svg/action-cam.svg" alt="Иконка: Экшн-камеры" width="71" height="87">
+              </div>
+              <h3 class="catalog-category-name">Экшн-камеры</h3>
+            </a>
+            <a href="#" class="catalog-category-link">
+              <div class="icon-block fitnes-watch">
+                <img src="img/svg/fitnes-watch.svg" alt="Иконка: фитнесc-браслеты" width="107" height="65">
+              </div>
+              <h3 class="catalog-category-name">Фитнес-браслеты</h3>
+            </a>
+            <a href="#" class="catalog-category-link">
+              <div class="icon-block smartwatch">
+                <img src="img/svg/smartwatch.svg" alt="Иконка: умные часы" width="56" height="98">
+              </div>
+              <h3 class="catalog-category-name">Умные часы</h3>
+            </a>
+            <a href="#" class="catalog-category-link">
+              <div class="icon-block copter">
+                <img src="img/svg/copter.svg" alt="Иконка: квадрокоптер" width="132" height="69">
+              </div>
+              <h3 class="catalog-category-name">Квадрокоптеры</h3>
+            </a>
+          </div>
         </section>
 
         <section class="services-block">
-
             <h2 class="visually-hidden">Услуги</h2>
             <div class="services-slider">
               <input class="visually-hidden" type="radio" id="slide1" name="services-slider-toggle" checked>
@@ -216,50 +217,53 @@
                 <p>Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия&#160;кредита. Выгодные для нашего банка, разумеется.</p>
               </section>
             </div>
-          </div>
         </section>
 
-        <ul class="brand-list">
-          <li>
-            <a class="brand-link dji" href="#">
-              <img class="brand-logo" src="img/logo-dji.jpg" alt="Логотип DJI">
-            </a>
-          </li>
-          <li>
-            <a class="brand-link spgadgets" href="#">
-              <img class="brand-logo" src="img/logo-spgadgets.jpg" alt="Логотип SPgadjets">
-            </a>
-          </li>
-          <li>
-            <a class="brand-link gopro" href="#">
-              <img class="brand-logo" src="img/logo-gopro.jpg" alt="Логотип GoPro">
-            </a>
-          </li>
-          <li>
-            <a class="brand-link vive" href="#">
-              <img class="brand-logo" src="img/logo-vive.jpg" alt="Логотип vive">
-            </a>
-          </li>
-        </ul>
+        <div class="brand-list-container">
+          <ul class="brand-list">
+            <li>
+              <a class="brand-link dji" href="#">
+                <img class="brand-logo" src="img/logo-dji.jpg" alt="Логотип DJI">
+              </a>
+            </li>
+            <li>
+              <a class="brand-link spgadgets" href="#">
+                <img class="brand-logo" src="img/logo-spgadgets.jpg" alt="Логотип SPgadjets">
+              </a>
+            </li>
+            <li>
+              <a class="brand-link gopro" href="#">
+                <img class="brand-logo" src="img/logo-gopro.jpg" alt="Логотип GoPro">
+              </a>
+            </li>
+            <li>
+              <a class="brand-link vive" href="#">
+                <img class="brand-logo" src="img/logo-vive.jpg" alt="Логотип vive">
+              </a>
+            </li>
+          </ul>
+        </div>
 
-        <div class="information-block">
-          <section class="about">
-            <h2>О нас</h2>
-            <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
-            <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
-            <ul class="delivery-options">
-              <li>Деловые Линии</li>
-              <li>Автотрейдинг</li>
-              <li>ЖелДорЭкспедиция</li>
-            </ul>
-            <a class="about-link" href="#">Подробнее о нас</a>
-          </section>
-          <section class="contacts">
-            <h2>Контакты</h2>
-            <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-            <img src="img/map.jpg" alt="Адрес офиса: ул.Строителей, 15" width="560" height="222">
-            <a class="mail-link" href="#">Напишите нам</a>
-          </section>
+        <div class="information-block-container">
+          <div class="information-block">
+            <section class="about">
+              <h2>О нас</h2>
+              <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+              <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+              <ul class="delivery-options">
+                <li>Деловые Линии</li>
+                <li>Автотрейдинг</li>
+                <li>ЖелДорЭкспедиция</li>
+              </ul>
+              <a class="about-link" href="#">Подробнее о нас</a>
+            </section>
+            <section class="contacts">
+              <h2>Контакты</h2>
+              <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+              <img src="img/map.jpg" alt="Адрес офиса: ул.Строителей, 15" width="560" height="222">
+              <a class="mail-link" href="#">Напишите нам</a>
+            </section>
+          </div>
         </div>
 
       </main>
